--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "@vue/compiler-sfc": "^3.2.30",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
@@ -19,14 +20,14 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^2.6.14",
+        "vue": "^3.2.29",
         "vue-loader": "^17.0.0",
         "vue-template-compiler": "^2.6.12",
         "webpack-cli": "^4.9.2"
     },
     "dependencies": {
-        "@vue/compiler-sfc": "^3.2.29",
+        "cross-env": "^7.0.3",
         "webpack": "^5.67.0",
-        "webpack-dev-server": "^2.9.1"
+        "webpack-dev-server": "^4.7.4"
     }
 }
