--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "pusher/pusher-php-server": "^7.0",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
